# KAI

./: .env  .replit  LICENSE  README.md  discord.py  kai.py  kaiel.js  pyproject.toml  requirements.txt  run.py  server.js  voice.js
.github/workflows/: codeql-analysis.yml
apis/: __init__.py  alarm.py  base.py  covid_api.py  dictionary.py  food_api.py  helper.py  kaylode_api.py  lyrics.py  music.py  openai_api.py  speech.py  together.py  translate_api.py  voice_api.py  wikipedia_api.py
bot/: __init__.py  base.py  kai.py
bot/kaiel/: kaiel.js  voice.js
configs/: __init__.py  configs.py  kai.yaml
database/: db.json
utils/: pages.py  utils.py
