[tool.poetry]
name = "repl_python3_discord-bot"
version = "0.1.0"
description = ""
authors = ["kaylode <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"
replit = "^3.1.0"
googletrans = "^3.0.0"
Unidecode = "^1.2.0"
gTTS = "^2.2.3"
pytz = "^2021.1"
sounddevice = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
